[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=2]
[ext_resource path="res://KellySlab-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 792.0
margin_top = 365.0
margin_right = 1128.0
margin_bottom = 715.0
custom_constants/separation = 10

[node name="Singleplayer" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 4 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 336.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 4 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_name" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 336.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "enter name"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 336.0
margin_bottom = 350.0

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 166.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 336.0
margin_bottom = 79.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Host" to="." method="_on_Host_pressed"]
